Add a "Remove" link to request pages and improve the remove warning dialog (Resolves #50)

--- a/SingularityUI/app/views/templates/request.hbs
+++ b/SingularityUI/app/views/templates/request.hbs
@@ -1,5 +1,5 @@
 <header class="jumbotron subhead" id="overview">
-    <h1>{{#hardBreak request.name}}{{/hardBreak}} <small><a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a></small></h1>
+    <h1>{{#hardBreak request.name}}{{/hardBreak}} <small><a data-request-id="{{ request.id }}" data-action="viewObjectJSON">JSON</a> &nbsp; <a data-request-id="{{ request.id }}" data-action="remove">Remove</a></small></h1>
     <p class="lead">{{#hardBreak request.id}}{{/hardBreak}}</p>
 </header>
 
