Better dark theme (Closes #49)

--- a/SingularityUI/app/styles/main.styl
+++ b/SingularityUI/app/styles/main.styl
@@ -18,7 +18,7 @@ a.disabled:hover
 #top-level-nav
     visibility hidden
 
-html.lightstrap, html.darkstrap
+html.light-theme, html.dark-theme
 
     #top-level-nav
         visibility visible
