--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -3,8 +3,6 @@
     <h1><a href="/singularity/task/{{ taskId }}/files/" data-route="task/{{ taskId }}/files/">...</a>/{{#each subfolders}}<a href="/singularity/task/{{ ../taskId }}/files/{{ fullPath }}" data-route="task/{{ ../taskId }}/files/{{ fullPath }}">{{name}}</a>/{{/each}}{{#hardBreak filename }}{{/hardBreak}}</h1>
 </header>
 
-<section>
-    <div class="row-fluid">
-        <div class="span12 tail-container"></div>
-    </div>
-</section>
+<div class="tail-outer">
+    <div class="tail-container"></div>
+</div>
