mailer and template updated

--- a/SingularityService/src/main/resources/templates/task_failed.html
+++ b/SingularityService/src/main/resources/templates/task_failed.html
@@ -3,5 +3,7 @@
 <br>
 {{ task_id }} failed with status {{ status }} <br>
 <br>
+<b> Recommended course of action: </b> {{ action }} <br>
+<br>
 <a href="{{ singularity_task_link }}">Click here to view the task and logs in Singularity</a>.
 <br>
