--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -23,32 +23,8 @@
 <section>
     <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
-        <div class="span12">
-            {{#if tasks.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Next run</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn tasks}}
-                            <tr data-task-id="{{ id }}">
-                                <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
-                                <td data-value="{{ nextRunAt}}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                                <td class="actions-column">
-                                    <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-task-id="{{ id }}" data-action="run-now">Run now</a>
-                                </td>
-                            </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                <center><p>No scheduled tasks.</p></center>
-            {{/if}}
+        <div data-tasks-table-container class="span12">
+            {{> tasksTable}}
         </div>
     </div>
 </section>
