Speed up the app by not fetching initial shared app collections (since the tasks/requests endpoints have gotten slow >1s)

--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -64,7 +64,11 @@
                     </tbody>
                 </table>
             {{else}}
-                <center><p>No active requests.</p></center>
+                {{#if collectionSynced}}
+                    <center><p>No active requests.</p></center>
+                {{else}}
+                    <div class="page-loader centered"></div>
+                {{/if}}
             {{/if}}
         </div>
     </div>
@@ -105,7 +109,11 @@
                     </tbody>
                 </table>
             {{else}}
-                <center><p>No active scheduled requests.</p></center>
+                {{#if collectionSynced}}
+                    <center><p>No active scheduled requests.</p></center>
+                {{else}}
+                    <div class="page-loader centered"></div>
+                {{/if}}
             {{/if}}
         </div>
     </div>
