--- a/SingularityUI/app/views/templates/requestsPaused.hbs
+++ b/SingularityUI/app/views/templates/requestsPaused.hbs
@@ -63,7 +63,11 @@
                     </tbody>
                 </table>
             {{else}}
-                <center><p>No paused requests.</p></center>
+                {{#if collectionSynced}}
+                    <center><p>No paused requests.</p></center>
+                {{else}}
+                    <div class="page-loader centered"></div>
+                {{/if}}
             {{/if}}
         </div>
     </div>
@@ -103,7 +107,11 @@
                     </tbody>
                 </table>
             {{else}}
-                <center><p>No paused scheduled requests.</p></center>
+                {{#if collectionSynced}}
+                    <center><p>No paused scheduled requests.</p></center>
+                {{else}}
+                    <div class="page-loader centered"></div>
+                {{/if}}
             {{/if}}
         </div>
     </div>
