--- a/SingularityUI/app/views/templates/tasksActiveTable.hbs
+++ b/SingularityUI/app/views/templates/tasksActiveTable.hbs
@@ -29,5 +29,9 @@
         </tbody>
     </table>
 {{else}}
-    <center><p>No active tasks.</p></center>
+    {{#if collectionSynced}}
+        <center><p>No active tasks.</p></center>
+    {{else}}
+        <div class="page-loader centered"></div>
+    {{/if}}
 {{/if}}
