--- a/SingularityUI/app/views/templates/tasksScheduledTable.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduledTable.hbs
@@ -21,5 +21,9 @@
         </tbody>
     </table>
 {{else}}
-    <center><p>No scheduled tasks.</p></center>
+    {{#if collectionSynced}}
+        <center><p>No scheduled tasks.</p></center>
+    {{else}}
+        <div class="page-loader centered"></div>
+    {{/if}}
 {{/if}}
