--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -96,6 +96,7 @@
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
                                 <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                    <a data-request-id="{{ id }}" data-action="run-now">Run now</a>
                                     <a data-request-id="{{ id }}" data-action="remove">Remove</a>
                                 </td>
                             </tr>
