--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -86,6 +86,7 @@
                         <tr>
                             <th data-sortable="false"></th>
                             <th>Name</th>
+                            <th>Requested</th>
                             <th data-sortable="false"></th>
                         </tr>
                     </thead>
@@ -94,6 +95,7 @@
                             <tr data-request-id="{{ id }}">
                                 <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
                                 <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                                 <td class="actions-column">
                                     <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
                                     <a data-request-id="{{ id }}" data-action="run-now">Run now</a>
