--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -53,8 +53,16 @@
     </div>
     <div class="row-fluid">
         <div class="span12">
-            <p>Executor guid:</p>
-            <pre>{{ taskHistory.task.mesosTask.executor.executorId.value }}</pre>
+            <dl>
+                <dt>Executor GUID</dt>
+                <dd><pre>{{ taskHistory.task.mesosTask.executor.executorId.value }}</pre></dd>
+                <dt>Directory</dt>
+                <dd><pre>{{ taskHistory.directory }}</pre></dd>
+                <dt>Hostname</dt>
+                <dd><pre>{{ taskHistory.task.offer.hostname }}</pre></dd>
+                <dt>Task request ports</dt>
+                <dd><pre>{{ taskHistory.task.taskRequest.request.executorData.ports }}</pre></dd>
+            </dl>
         </div>
     </div>
 </section>
