--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -60,8 +60,10 @@
                 <dd><pre>{{ taskHistory.directory }}</pre></dd>
                 <dt>Hostname</dt>
                 <dd><pre>{{ taskHistory.task.offer.hostname }}</pre></dd>
-                <dt>Task request ports</dt>
-                <dd><pre>{{ taskHistory.task.taskRequest.request.executorData.ports }}</pre></dd>
+                {{#if taskHistory.task.taskRequest.request.executorData.ports }}
+                    <dt>Task request ports</dt>
+                    <dd><pre>{{ taskHistory.task.taskRequest.request.executorData.ports }}</pre></dd>
+                {{/if}}
             </dl>
         </div>
     </div>
