--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -25,138 +25,140 @@
 
 <section>
     <div class="row-fluid">
+        <div class="span12">
+            <ul class="nav nav-pills">
+                <li {{#ifEqual lastRequestsSubFilter "active"}}class="active"{{/ifEqual}}>
+                    <a href="/singularity/requests" data-route="requests">Running</a>
+                </li>
+                <li {{#ifEqual lastRequestsSubFilter "on-demand"}}class="active"{{/ifEqual}}>
+                    <a href="/singularity/requests/active/on-demand" data-route="requests/active/on-demand">On-demand</a>
+                </li>
+                <li {{#ifEqual lastRequestsSubFilter "scheduled"}}class="active"{{/ifEqual}}>
+                    <a href="/singularity/requests/active/scheduled" data-route="requests/active/scheduled">Scheduled</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="row-fluid">
         <input type="search" placeholder="Filter requests..." required />
     </div>
 </section>
 
 <section>
-    <div class="page-header">
-        <h1>Active</h1>
-    </div>
     <div class="row-fluid">
         <div class="span12">
-            {{#if requests.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th data-sortable="false"></th>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Instances</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requests}}
-                            <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ instances }}</td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="remove">Remove</a>
-                                </td>
+            {{#ifEqual lastRequestsSubFilter "active"}}
+                {{#if requests.length}}
+                    <table class="table" data-sortable>
+                        <thead>
+                            <tr>
+                                <th data-sortable="false"></th>
+                                <th>Name</th>
+                                <th>Requested</th>
+                                <th>Deploy User</th>
+                                <th>Instances</th>
+                                <th data-sortable="false"></th>
                             </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No active requests.</p></center>
+                        </thead>
+                        <tbody>
+                            {{#eachWithFn requests}}
+                                <tr data-request-id="{{ id }}">
+                                    <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
+                                    <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                    <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                    <td>{{ deployUser }}</td>
+                                    <td>{{ instances }}</td>
+                                    <td class="actions-column">
+                                        <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                        <a data-request-id="{{ id }}" data-action="remove">Remove</a>
+                                    </td>
+                                </tr>
+                            {{/eachWithFn}}
+                        </tbody>
+                    </table>
                 {{else}}
-                    <div class="page-loader centered"></div>
+                    {{#if collectionSynced}}
+                        <center><p>No active requests.</p></center>
+                    {{else}}
+                        <div class="page-loader centered"></div>
+                    {{/if}}
                 {{/if}}
-            {{/if}}
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>On-demand</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {{#if requestsOnDemand.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th data-sortable="false"></th>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requestsOnDemand}}
-                            <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="run-now">Run now</a>
-                                    <a data-request-id="{{ id }}" data-action="remove">Remove</a>
-                                </td>
+            {{/ifEqual}}
+            {{#ifEqual lastRequestsSubFilter "on-demand"}}
+                {{#if requestsOnDemand.length}}
+                    <table class="table" data-sortable>
+                        <thead>
+                            <tr>
+                                <th data-sortable="false"></th>
+                                <th>Name</th>
+                                <th>Requested</th>
+                                <th data-sortable="false"></th>
                             </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No on-demand requests.</p></center>
+                        </thead>
+                        <tbody>
+                            {{#eachWithFn requestsOnDemand}}
+                                <tr data-request-id="{{ id }}">
+                                    <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
+                                    <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                    <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                    <td class="actions-column">
+                                        <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                        <a data-request-id="{{ id }}" data-request-type="on-demand" data-action="run-now">Run now</a>
+                                        <a data-request-id="{{ id }}" data-action="remove">Remove</a>
+                                    </td>
+                                </tr>
+                            {{/eachWithFn}}
+                        </tbody>
+                    </table>
                 {{else}}
-                    <div class="page-loader centered"></div>
+                    {{#if collectionSynced}}
+                        <center><p>No on-demand requests.</p></center>
+                    {{else}}
+                        <div class="page-loader centered"></div>
+                    {{/if}}
                 {{/if}}
-            {{/if}}
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="page-header">
-        <h1>Scheduled</h1>
-    </div>
-    <div class="row-fluid">
-        <div class="span12">
-            {{#if requestsScheduled.length}}
-                <table class="table" data-sortable>
-                    <thead>
-                        <tr>
-                            <th data-sortable="false"></th>
-                            <th>Name</th>
-                            <th>Requested</th>
-                            <th>Deploy User</th>
-                            <th>Schedule</th>
-                            <th data-sortable="false"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#eachWithFn requestsScheduled}}
-                            <tr data-request-id="{{ id }}">
-                                <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
-                                <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
-                                <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
-                                <td>{{ deployUser }}</td>
-                                <td>{{ schedule }}</td>
-                                <td class="actions-column">
-                                    <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                    <a data-request-id="{{ id }}" data-action="remove">Remove</a>
-                                </td>
+            {{/ifEqual}}
+            {{#ifEqual lastRequestsSubFilter "scheduled"}}
+                {{#if requestsScheduled.length}}
+                    <table class="table" data-sortable>
+                        <thead>
+                            <tr>
+                                <th data-sortable="false"></th>
+                                <th>Name</th>
+                                <th>Requested</th>
+                                <th>Deploy User</th>
+                                <th>Schedule</th>
+                                <th data-sortable="false"></th>
                             </tr>
-                        {{/eachWithFn}}
-                    </tbody>
-                </table>
-            {{else}}
-                {{#if collectionSynced}}
-                    <center><p>No active scheduled requests.</p></center>
+                        </thead>
+                        <tbody>
+                            {{#eachWithFn requestsScheduled}}
+                                <tr data-request-id="{{ id }}">
+                                    <td><a class="star" data-action="starToggle" data-starred="{{ starred }}" data-request-id="{{ id }}" data-request-name="{{ name }}">★</a></td>
+                                    <td><span title="{{ id }}"><a href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                                    <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                                    <td>{{ deployUser }}</td>
+                                    <td>{{ schedule }}</td>
+                                    <td class="actions-column">
+                                        <a data-request-id="{{ id }}" data-action="viewJSON">JSON</a>
+                                        <a data-request-id="{{ id }}" data-request-type="scheduled" data-action="run-now">Run now</a>
+                                        <a data-request-id="{{ id }}" data-action="remove">Remove</a>
+                                    </td>
+                                </tr>
+                            {{/eachWithFn}}
+                        </tbody>
+                    </table>
                 {{else}}
-                    <div class="page-loader centered"></div>
+                    {{#if collectionSynced}}
+                        <center><p>No active scheduled requests.</p></center>
+                    {{else}}
+                        <div class="page-loader centered"></div>
+                    {{/if}}
                 {{/if}}
-            {{/if}}
+            {{/ifEqual}}
         </div>
     </div>
 </section>
