A bunch of improvements to the task page, including adding auto-refresh support and better handling of the case when there aren't any `taskUpdates` yet

--- a/SingularityUI/app/views/templates/filesTable.hbs
+++ b/SingularityUI/app/views/templates/filesTable.hbs
@@ -1,5 +1,7 @@
 {{#if taskFilesSandboxUnavailable}}
-    <center><p>The sandbox is unavailable for this task.</p></center>
+    <div class="page-loader centered"></div>
+    <br>
+    <center><p>Attempting to connect to the sandbox for this task...</p></center>
 {{else}}
     {{#if taskFiles}}
         <table class="table" data-sortable>
