Add small loader style

--- a/SingularityUI/app/styles/loader.styl
+++ b/SingularityUI/app/styles/loader.styl
@@ -12,6 +12,11 @@
     backface-visibility hidden
     animation spinner 700ms linear infinite
 
+    &.small
+        border-width 1px
+        height 1em
+        width 1em
+
     &.fixed
         position fixed
         margin auto
