--- a/SingularityUI/app/views/templates/tail.hbs
+++ b/SingularityUI/app/views/templates/tail.hbs
@@ -6,3 +6,7 @@
 <div class="tail-outer">
     <div class="tail-container"></div>
 </div>
+
+<div class="tail-indicator">
+    <div class="page-loader small centered"></div>
+</div>
