--- a/SingularityService/src/main/resources/templates/task_not_running_warning.jade
+++ b/SingularityService/src/main/resources/templates/task_not_running_warning.jade
@@ -1,17 +1,26 @@
-html
-  head
-    title Task Failed
-  body
-    p Request_id: #{request_id}
-    p Task #{task_id} has not started yet 
-    p It has been running for #{duration_running}. 
-    p It will be killed after #{duration_left} and a new one will take its place.
-    p #{singularity_task_link}
+table(height="75px", width="100%", style="border: none")
+  tr
+    td(bgcolor="#FFA500")
+      font(size=5)
+        span(style="font-family: Helvetica; padding: 10px") 
+          span(style="color: white") ! #{request_id} has not started  
+          || It will be killed and restarted
 
-    p Task Update History:
-    ul
-      for task_update in task_updates
-        li= task_update
-      else
-        li No updates
-          
+  
+p <b> Request_id: </b> #{request_id}
+p <b> Task: </b> #{task_id} has not started yet 
+p It has been running for #{duration_running}. 
+p It will be killed after #{duration_left} and a new one will take its place.
+p #{singularity_task_link}
+
+p: b Task Update History:
+table(style="border:1px solid black; border-collapse: collapse;")
+  tr
+    th(style="border:1px solid black; border-collapse: collapse;") DATETIME
+    th(style="border:1px solid black; border-collapse: collapse;") STATUS UPDATE
+  each task_update, i in task_updates
+    tr
+      td(style="border:1px solid black; border-collapse: collapse;")= task_update.date
+      td(style="border:1px solid black; border-collapse: collapse;")= task_update.update
+
+      
