--- a/SingularityUI/app/views/templates/filesTable.hbs
+++ b/SingularityUI/app/views/templates/filesTable.hbs
@@ -23,7 +23,9 @@
                                 <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">{{ shortPath }}</a>
                             {{/if}}
                         </td>
-                        <td data-value="{{ size }}">{{ sizeHuman }}</td>
+                        <td data-value="{{ size }}">
+                            {{#unless isDirectory}}{{ sizeHuman }}{{/unless}}
+                        </td>
                         <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
                         <td class="actions-column">
                             {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
