--- a/SingularityUI/app/views/templates/filesTable.hbs
+++ b/SingularityUI/app/views/templates/filesTable.hbs
@@ -7,7 +7,7 @@
         <table class="table" data-sortable>
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th data-sortable="false"></th>
                     <th>Size</th>
                     <th>Last modified</th>
                     <th data-sortable="false"></th>
@@ -18,9 +18,9 @@
                     <tr>
                         <td>
                             {{#if isDirectory}}
-                                <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}">{{ shortPath }}</a>
+                                <a href="/singularity/task/{{ taskId }}/files{{ relPath }}" data-route="/task/{{ taskId }}/files{{ relPath }}"><span class="icon icon-directory"></span>{{ shortPath }}/</a>
                             {{else}}
-                                <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">{{ shortPath }}</a>
+                                <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}"><span class="icon icon-file"></span>{{ shortPath }}</a>
                             {{/if}}
                         </td>
                         <td data-value="{{ size }}">
@@ -28,7 +28,10 @@
                         </td>
                         <td data-value="{{ mtime }}"><span title="{{ mtime }}">{{ mtimeHuman }}</span></td>
                         <td class="actions-column">
-                            {{#unless isDirectory}}<a href="{{ downloadLink }}" target="_blank">Download</a>{{/unless}}
+                            {{#unless isDirectory}}
+                                <a href="/singularity/task/{{ taskId }}/tail{{ relPath }}" data-route="/task/{{ taskId }}/tail{{ relPath }}">View</a>
+                                <a href="{{ downloadLink }}" target="_blank">Download</a>
+                            {{/unless}}
                         </td>
                     </tr>
                 {{/eachWithFn}}
