--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -112,6 +112,11 @@
                 background #fcfcfc
                 margin 0
 
+                h1
+                    display: block
+                    overflow: hidden
+                    height: 1.1em
+
             .tail-outer
                 position absolute
                 top 100px
