Better handling of tailing empty files

--- a/SingularityUI/app/styles/tailer.styl
+++ b/SingularityUI/app/styles/tailer.styl
@@ -66,6 +66,22 @@
     @media (max-width: 1199px)
         height 500px
 
+    &.empty
+        font-family inherit
+        text-align center
+        font-size 1.3em
+
+        &:before
+            content "This file is empty."
+            opacity .7
+            position absolute
+            margin auto
+            top 0
+            left 0
+            right 0
+            bottom 4em
+            height 1em
+
     .tail-container
 
         > div
