--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -27,13 +27,13 @@
     <div class="row-fluid">
         <div class="span12">
             <ul class="nav nav-pills">
-                <li {{#ifEqual lastRequestsSubFilter "active"}}class="active"{{/ifEqual}}>
+                <li {{#ifEqual requestsSubFilter "running"}}class="active"{{/ifEqual}}>
                     <a href="/singularity/requests" data-route="requests">Running</a>
                 </li>
-                <li {{#ifEqual lastRequestsSubFilter "on-demand"}}class="active"{{/ifEqual}}>
+                <li {{#ifEqual requestsSubFilter "on-demand"}}class="active"{{/ifEqual}}>
                     <a href="/singularity/requests/active/on-demand" data-route="requests/active/on-demand">On-demand</a>
                 </li>
-                <li {{#ifEqual lastRequestsSubFilter "scheduled"}}class="active"{{/ifEqual}}>
+                <li {{#ifEqual requestsSubFilter "scheduled"}}class="active"{{/ifEqual}}>
                     <a href="/singularity/requests/active/scheduled" data-route="requests/active/scheduled">Scheduled</a>
                 </li>
             </ul>
@@ -43,14 +43,14 @@
 
 <section>
     <div class="row-fluid">
-        <input type="search" placeholder="Filter requests..." required />
+        <input type="search" placeholder="Filter requests..." value="{{ searchFilter }}" required />
     </div>
 </section>
 
 <section>
     <div class="row-fluid">
         <div class="span12">
-            {{#ifEqual lastRequestsSubFilter "active"}}
+            {{#ifEqual requestsSubFilter "running"}}
                 {{#if requests.length}}
                     <table class="table" data-sortable>
                         <thead>
@@ -81,13 +81,13 @@
                     </table>
                 {{else}}
                     {{#if collectionSynced}}
-                        <center><p>No active requests.</p></center>
+                        <center><p>No active running requests.</p></center>
                     {{else}}
                         <div class="page-loader centered"></div>
                     {{/if}}
                 {{/if}}
             {{/ifEqual}}
-            {{#ifEqual lastRequestsSubFilter "on-demand"}}
+            {{#ifEqual requestsSubFilter "on-demand"}}
                 {{#if requestsOnDemand.length}}
                     <table class="table" data-sortable>
                         <thead>
@@ -121,7 +121,7 @@
                     {{/if}}
                 {{/if}}
             {{/ifEqual}}
-            {{#ifEqual lastRequestsSubFilter "scheduled"}}
+            {{#ifEqual requestsSubFilter "scheduled"}}
                 {{#if requestsScheduled.length}}
                     <table class="table" data-sortable>
                         <thead>
