--- a/SingularityUI/app/views/templates/requestsCleaning.hbs
+++ b/SingularityUI/app/views/templates/requestsCleaning.hbs
@@ -25,7 +25,7 @@
 
 <section>
     <div class="row-fluid">
-        <input type="search" placeholder="Filter requests..." required />
+        <input type="search" placeholder="Filter requests..." value="{{ searchFilter }}" required />
     </div>
     <div class="row-fluid">
         <div class="span12">
