--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -21,7 +21,7 @@
 </section>
 
 <section>
-    <input type="search" placeholder="Filter tasks..." required />
+    <input type="search" placeholder="Filter tasks..." value="{{ searchFilter }}" required />
     <div class="row-fluid">
         <div data-tasks-table-container class="span12">
             {{> tasksTable}}
