--- a/SingularityUI/app/styles/reset.styl
+++ b/SingularityUI/app/styles/reset.styl
@@ -38,11 +38,11 @@ input[type="search"][required]
         content "\00D7"
         display block
         position absolute
-        right 0
-        top 0
         bottom 0
         width .85rem
-        font-size .8rem
+        font-size 2rem
+        right 1rem
+        top .67rem
         text-align left
         cursor pointer
 
