--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -62,12 +62,18 @@
     <div class="row-fluid">
         <div class="span12">
             <dl>
-                <dt>Executor GUID</dt>
-                <dd><pre>{{ taskHistory.task.mesosTask.executor.executorId.value }}</pre></dd>
-                <dt>Directory</dt>
-                <dd><pre>{{ taskHistory.directory }}</pre></dd>
-                <dt>Hostname</dt>
-                <dd><pre>{{ taskHistory.task.offer.hostname }}</pre></dd>
+                {{#if taskHistory.task.mesosTask.executor.executorId.value }}
+                    <dt>Executor GUID</dt>
+                    <dd><pre>{{ taskHistory.task.mesosTask.executor.executorId.value }}</pre></dd>
+                {{/if}}
+                {{#if taskHistory.directory }}
+                    <dt>Directory</dt>
+                    <dd><pre>{{ taskHistory.directory }}</pre></dd>
+                {{/if}}
+                {{#if taskHistory.task.offer.hostname }}
+                    <dt>Hostname</dt>
+                    <dd><pre>{{ taskHistory.task.offer.hostname }}</pre></dd>
+                {{/if}}
                 {{#if taskHistory.task.taskRequest.request.executorData.ports }}
                     <dt>Task request ports</dt>
                     <dd><pre>{{ taskHistory.task.taskRequest.request.executorData.ports }}</pre></dd>
